# test2

./: Cargo.toml  build.rs
config/: login.proto
migrations/2023-05-26-171453_create_plants/: up.sql
src/: main.rs  schema.rs
src/database/: mysql.rs
src/grpc_models/: user.rs
src/models/: mod.rs  user_model.rs
src/services/: mod.rs  user_service.rs
