[package]
name = "loginMicroservice"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0.4", features = ["mysql"] }
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
log = "0.4.18"
env_logger = "0.10.0"
chrono = "0.4.25"
tonic = "0.9.2"
prost = "*"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }